<resources>
    <!-- name = "id" A-Z ordered-->
    <string name="app_name">O2Calculator</string>
    <string-array name="VolCylinder">
        <item>1</item>
        <item>1.2</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>7.5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>50</item>
    </string-array>
    <string-array name="PressureUnit">
        <item>bar</item>
        <item>kPa</item>
        <item>psi</item>
    </string-array>
    <string name="txtBares">bar (Bars)</string>
    <string name="txtInfoLO2">Select the pressure and capacity of the cylinder.</string>
    <string name="txtInfoTiempo">Select the administration speed.</string>
    <string name="txtLitrosB">L (Liters of the cylinder)</string>
    <string name="txtLO2Restante">There are xxxx liters of O2 left.</string>
    <string name="txtTiempoRestante">xxx hours and xxx minutes left.</string>
    <string name="txtVelO2">L/min (Amount of O2 administered)</string>




</resources>